<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrarse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <ImageButton
                android:id="@+id/btnInicioSesion"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/regresar"
                android:background="@android:color/white"
                android:layout_gravity="left"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/firebase"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloPrincipal"
                style="@style/tituloPrincipal"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarUsuario"
                style="@style/subTituloPrincipal"
                android:gravity="center"
                android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btnRegistrarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textColor="@android:color/white"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animacionGuardado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/save"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>