<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registarEmpleado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/btnRegresarMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/regresar"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/firebase" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloPrincipal"
            style="@style/tituloPrincipal"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarUsuario"
            style="@style/subTituloPrincipal"
            android:gravity="center"
            android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/edit_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Edad"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/edit_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Domicilio conocido"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Url de la imagen"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/btnRegistrarEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:textColor="@android:color/white"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animacionGuardado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/save" />

</androidx.constraintlayout.widget.ConstraintLayout>